-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.7.0-beta2
-
None
-
b9328012b16f6e878782b7e309ae8327616b919e
I added a mouse area in design mode, added a (ok, trivial) connection, set the break point on the onClicked in the .ui.qml file and went on debugging.
When the breakpoint was hit, the file was opened in Design mode, of course without any other indication of what happened.
This was also true after the .ui.qml was already visible in edit mode: It switched to Design mode again.