Debugger: Do not switch to design mode when hitting a break point

Change-Id: I2b31aa78a707ca830382095f20d33439caa830ac
Task-number: QTCREATORBUG-20712
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>