src/plugins/debugger/debuggerengine.cpp
@@ -534,8 +534,10 @@ void DebuggerEngine::gotoLocation(const Location &loc)
     const QString file = QDir::cleanPath(loc.fileName());
     const int line = loc.lineNumber();
     bool newEditor = false;
-    IEditor *editor = EditorManager::openEditor(file, Id(),
-                                                EditorManager::IgnoreNavigationHistory, &newEditor);
+    IEditor *editor = EditorManager::openEditor(
+                file, Id(),
+                EditorManager::IgnoreNavigationHistory | EditorManager::DoNotSwitchToDesignMode,
+                &newEditor);
     QTC_ASSERT(editor, return); // Unreadable file?
 
     editor->gotoLine(line, 0, !boolSetting(StationaryEditorWhileStepping));
